--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TeamAvengersAngular</title>
+    <title>Termometro</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -19,12 +19,7 @@
 </head>
 
 <body>
-    <div class="container">
-        <app-root></app-root>
-    </div>
-
-
-
+    <app-root></app-root>
 </body>
 
 </html>
